--- a/CHANGES
+++ b/CHANGES
@@ -5,7 +5,9 @@ Version
 
 - Completely revised the modeling of Diffie-Hellman assumptions.
   (Your protocol models that use Diffie-Hellman will need to be revised.)
-- Macro ROM_hash_quint for random oracles with 5 arguments.
+- The macro from random oracles with n arguments is now named
+  ROM_hash_n and is defined for n from 1 to 10. It optimizes the
+  treatment of terms H(x1) = H(x2).
 - Added optional side conditions in equation and collision statements.
 - New setting useKnownEqualitiesWithFunctionsInMatching.
 
