--- a/docs/manual.tex
+++ b/docs/manual.tex
@@ -1110,15 +1110,11 @@ the choice of the hash function, must be \texttt{bounded}, typically
    for use in the \texttt{crypto} command 
    (see Section~\ref{sec:interact}).
 
- \item
-   $\texttt{expand ROM\_hash\_pair(}\vn{key}, \vn{hashinput1}, \vn{hashinput2}, \vn{hashoutput}, \vn{hash}, \vn{hashoracle}, \vn{qH}\texttt{).}$\\
-   $\texttt{expand ROM\_hash\_triple(}\vn{key}, \vn{hashinput1}, \vn{hashinput2}, \vn{hashinput3}, \vn{hashoutput}, \vn{hash}, \vn{hashoracle}, \vn{qH}\texttt{).}$\\
-$\texttt{expand ROM\_hash\_quad(}\vn{key}, \vn{hashinput1}, \vn{hashinput2}, \vn{hashinput3}, \vn{hashinput4}, \vn{hashoutput}, \vn{hash}, \vn{hashoracle}, \vn{qH}\texttt{).}$\\
-$\texttt{expand ROM\_hash\_quint(}\vn{key}, \vn{hashinput1}, \vn{hashinput2}, \vn{hashinput3}, \vn{hashinput4}, \vn{hashinput5}, \vn{hashoutput}, \vn{hash}, \vn{hashoracle}, \vn{qH}\texttt{).}$\\
-   define random oracles with 2, 3, 4, and 5 arguments respectively, similarly to \texttt{ROM\_hash} above.
-   Letting $N$ be the number of arguments of the oracle,
-   $\vn{hashinput1},\dots,\vn{hashinput}N$ are the types of the inputs of the hash function and
-   $\vn{hash}(\vn{key}, \vn{hashinput1}, \dots, \vn{hashinput}N): \vn{hashoutput}$ is the hash function.
+ \item Similarly, for $N$ from 1 to 10, the macros\\
+   $\texttt{expand ROM\_hash\_$N$(}\vn{key}, \vn{hashinput1}, \dots, \vn{hashinput}N, \vn{hashoutput}, \vn{hash}, \vn{hashoracle}, \vn{qH}\texttt{).}$\\
+   define random oracles with $N$ arguments, similarly to \texttt{ROM\_hash} above.
+   $\vn{hashinput1}$, \dots, $\vn{hashinput}N$ are the types of the inputs of the hash function and
+   $\vn{hash}(\vn{key}$, $\vn{hashinput1}$, \dots, $\vn{hashinput}N):$ $\vn{hashoutput}$ is the hash function.
 
 \item $\texttt{expand CollisionResistant\_hash(}\vn{key}, \vn{hashinput}, \vn{hashoutput}, \vn{hash}, \vn{hashoracle}, \vn{Phash}\texttt{).}$
 defines a collision-resistant hash function.
