--- a/CHANGES
+++ b/CHANGES
@@ -15,6 +15,8 @@ Version
 - New setting useKnownEqualitiesWithFunctionsInMatching.
 - In interactive mode, Ctrl-C interrupts the current command.
   (May not work under Windows.)
+- Option "set forgetOldGames = true" and command "forget_old_games"
+  to save memory. (However, it prevents undo.)
 
 Version 2.00
 
