--- a/TODO
+++ b/TODO
@@ -1,5 +1,6 @@
-Macros ..._RSR require the exponents to be chosen uniformly in Z/qZ
-but DH_good_group chooses them uniformly in (Z/qZ)*...
+Allow insert find[unique], provided CryptoVerif manages to
+prove that the find is indeed unique.
+
 
 0) Files that do not work
 
@@ -3443,3 +3444,7 @@ DONE 23/08/2018
   in examples/cryptoverif/denning-sacco-corr.pcv
    Solved by V. Cheval
    
+Macros ..._RSR require the exponents to be chosen uniformly in Z/qZ
+but DH_good_group chooses them uniformly in (Z/qZ)*...
+FIXED by adding 1/|Z| in ..._RSR so that exponents can also be
+chosen in (Z/qZ)^*.
